[tool.poetry]
name = "drf-orjson-renderer"
version = "0.1.0"
description = "clone of unmaintained \"drf-orjson-renderer\""
authors = ["Your Name <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.15.1"
orjson = "^3.10.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
django-stubs = "^5.0.0"
djangorestframework-stubs = "^3.15.0"
ipdb = "^0.13.13"
ipython = "^8.24.0"
isort = "^5.13.2"
mypy = "^1.10.0"
numpy = "^1.26.4"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
twine = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
